# smolang

./: .clang-format  .gitignore  CMakeLists.txt  eg.slang
slang/: ASTBuilder.cpp  ASTBuilder.h  Exception.h  Lexer.cpp  Lexer.h  SourceFile.cpp  SourceFile.h  Token.cpp  Token.h  main.cpp
slang/ast/: ASTNode.h  Program.cpp  Program.h  Symbol.h  TypeRef.cpp  TypeRef.h  VarRef.cpp  VarRef.h
slang/ast/expressions/: AssignExpr.cpp  AssignExpr.h  BinaryExpr.cpp  BinaryExpr.h  CallArgList.cpp  CallArgList.h  CallExpr.cpp  CallExpr.h  DerefExpr.cpp  DerefExpr.h  Expr.h  InferredDeclExpr.cpp  InferredDeclExpr.h  LiteralExpr.cpp  LiteralExpr.h  RefExpr.cpp  RefExpr.h  UnaryExpr.cpp  UnaryExpr.h  VarRefExpr.cpp  VarRefExpr.h
slang/ast/functions/: FuncBody.cpp  FuncBody.h  FuncDef.cpp  FuncDef.h  FuncDefList.cpp  FuncDefList.h  FuncParamDef.cpp  FuncParamDef.h  FuncParamDefList.cpp  FuncParamDefList.h  FuncRef.cpp  FuncRef.h  FuncSignature.cpp  FuncSignature.h
slang/ast/statements/: ExprStmt.cpp  ExprStmt.h  IfStmt.cpp  IfStmt.h  ReturnStmt.cpp  ReturnStmt.h  Stmt.cpp  Stmt.h  StmtBlock.cpp  StmtBlock.h  StmtList.cpp  StmtList.h  WhileStmt.cpp  WhileStmt.h
slang/dependencies/: args.h
slang/types/: SymbolTable.cpp  SymbolTable.h  Type.cpp  Type.h
slang/types/primitives/: BoolType.cpp  BoolType.h  FloatType.cpp  FloatType.h  IntType.cpp  IntType.h
slang/visitors/: IVisitor.h  IrGenerator.cpp  IrGenerator.h  Printer.cpp  Printer.h  TypeChecker.cpp  TypeChecker.h
